feat: style (wip)

--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@font-face {
+    font-family: 'Inter';
+    src: url('../fonts/Inter-VariableFont_slnt,wght.ttf') format('truetype');
+    font-weight: 100 900;
+    font-style: oblique 0deg 90deg;
+}
+
+html {
+    font-feature-settings: "cv02","cv03","cv04","cv11";
+}
