--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-        <title>{% block title %}Yannis Sgarra{% endblock %}</title>
+        <title>{% block title %}{{ employee().firstName }} {{ employee().lastName }}{% endblock %}</title>
         
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
@@ -17,7 +17,7 @@
     <body class="min-h-screen flex flex-col text-gray-500 md:text-lg lg:text-xl xl:text-2xl dark:bg-gray-800 dark:text-gray-300">
         <header class="mx-auto px-2 w-full max-w-screen-xl sm:px-4 md:px-8">
             <div class="relative h-12 flex items-center border-b border-gray-200 md:h-16 dark:border-gray-600">
-                <a class="h-full flex items-center font-bold tracking-tight xl:text-xl" href="{{ url('home') }}"><span class="text-gray-800 dark:text-white">yannis</span><span class="text-gray-400">sgarra</span></a>
+                <a class="h-full flex items-center font-bold tracking-tight xl:text-xl" href="{{ url('home') }}"><span class="text-gray-800 dark:text-white">{{ employee().firstName|lower }}</span><span class="text-gray-400">{{ employee().lastName|lower }}</span></a>
 
                 <div class="absolute top-1/2 left-1/2 transform -translate-x-1/2 -translate-y-1/2 text-xs md:text-base">
                     <ul class="p-0.5 flex border border-gray-400 rounded-full md:p-1">
