--- a/templates/frontoffice/home.html.twig
+++ b/templates/frontoffice/home.html.twig
@@ -7,11 +7,11 @@
             <div class="mb-4 w-full h-48 flex-shrink-0 overflow-hidden bg-center bg-cover rounded sm:order-2 sm:mb-0 sm:ml-4 md:ml-8 xl:ml-12 xs:h-64 sm:w-1/3 xl:w-1/4 sm:h-auto sm:rounded-lg xl:rounded-xl" style="background-image: url({{ asset('uploads/profile.jpg') }})"></div>
 
             <div class="sm:order-1">
-                {{ elements.header_overtitle('Yannis Sgarra') }}
-                {{ elements.header_title('Développeur web') }}
-                {{ elements.header_description('Passionné du web, curieux des nouvelles technologies, j\'aime passer du temps à façonner les applications que je développe, avec pour objectif de toujours offrir la meilleure réponse possible aux problématiques de l\'utilisateur.') }}
+                {{ elements.header_overtitle(employee().firstName ~ ' ' ~ employee().lastName) }}
+                {{ elements.header_title(employee().role) }}
+                {{ elements.header_description(employee().description) }}
                 
-                {{ elements.service_links() }}
+                {{ elements.service_links(employee()) }}
             </div>
         </div>
     </header>
