--- a/templates/frontoffice/elements.html.twig
+++ b/templates/frontoffice/elements.html.twig
@@ -58,7 +58,7 @@
 
                     <div class="ml-2 flex-grow sm:ml-4">
                         {% if mission.customer is not null %}
-                            <p class="font-bold text-gray-800 dark:text-white">
+                            <p class="flex font-bold text-gray-800 dark:text-white">
                                 {% if mission.link is not null %}
                                     <a class="flex items-center" href="{{ mission.link }}" target="_link">
                                         {{ mission.customer }} <i class="fas fa-external-link-alt ml-1 text-base"></i>
