feat: persisted state

--- a/templates/frontoffice/base.html.twig
+++ b/templates/frontoffice/base.html.twig
@@ -1,7 +1,7 @@
 {% import "frontoffice/elements.html.twig" as elements %}
 
 <!DOCTYPE html>
-<html id="app" class="light">
+<html id="app" class="{{ darkModeClass() }}">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
