--- a/templates/frontoffice/home.html.twig
+++ b/templates/frontoffice/home.html.twig
@@ -4,7 +4,7 @@
 {% block body %}
     <header class="mt-4 mx-auto px-2 max-w-screen-xl md:mt-8 xl:mt-16 sm:px-4 md:px-8">
         <div class="flex flex-col sm:flex-row">
-            <div class="mb-4 w-full h-48 flex-shrink-0 overflow-hidden bg-center bg-cover rounded sm:order-2 sm:mb-0 sm:ml-4 md:ml-8 xl:ml-12 xs:h-64 sm:w-1/3 xl:w-1/4 sm:h-auto sm:rounded-lg xl:rounded-xl" style="background-image: url({{ asset('uploads/career/employee/profile-' ~ employee().id ~ '.jpg') }})"></div>
+            <div class="mb-4 w-full h-48 flex-shrink-0 overflow-hidden bg-center bg-cover rounded sm:order-2 sm:mb-0 sm:ml-4 md:ml-8 xl:ml-12 xs:h-64 sm:w-1/3 xl:w-1/4 sm:h-auto sm:rounded-lg xl:rounded-xl" style="background-image: url({{ asset('career/employee/profile-' ~ employee().id ~ '.jpg', 'uploads') }})"></div>
 
             <div class="sm:order-1">
                 {{ elements.header_overtitle(employee().firstName ~ ' ' ~ employee().lastName) }}
