--- a/templates/frontoffice/about.html.twig
+++ b/templates/frontoffice/about.html.twig
@@ -17,7 +17,7 @@
     {{ elements.hr() }}
 
     <div class="mx-auto px-2 max-w-screen-xl sm:px-4 md:px-8">
-        {% for work in activities|filter(activity => activity.type in ['work', 'project']) %}
+        {% for work in works %}
             {{ elements.activity(work, 'MMMM YYYY') }}
         {% endfor %}
     </div>
@@ -25,7 +25,7 @@
     {{ elements.hr() }}
 
     <div class="mx-auto px-2 max-w-screen-xl sm:px-4 md:px-8">
-        {% for training in activities|filter(activity => activity.type in ['training']) %}
+        {% for training in trainings %}
             {{ elements.activity(training, 'YYYY') }}
         {% endfor %}
     </div>
